# grpcpp-examples

./: .gitignore  CMakeLists.txt  LICENSE  README.md
auth/: generate_auth.sh
protos/robl/api/: auth.proto  data_chunk.proto  geometry.proto  header.proto  service.proto  test.proto  version.proto
src/client/: CMakeLists.txt  file_reader_into_stream.h  main.cpp  sequential_file_reader.h  utils.cpp
src/client/callback_client/: CMakeLists.txt  main.cpp
src/client/sync_client/: CMakeLists.txt  main.cpp
src/client/test_client/: CMakeLists.txt  file_reader_into_stream.hpp  main.cpp  sequential_file_reader.cpp  sequential_file_reader.h  test_client.hpp  utils.cpp  utils.h
src/client/test_client/file_stream_provider/: file_stream_provider.hpp  sequential_file_reader.cpp  sequential_file_reader.hpp
src/client/test_client/grpc_file_sender/: grpc_file_sender.hpp  sequential_file_reader.cpp  sequential_file_reader.h
src/server/: CMakeLists.txt  main.cpp  robl_service_impl.hpp  sequential_file_writer.h  test_service_impl.hpp
src/server/callback_server/: CMakeLists.txt  main.cpp
src/server/sync_server/: CMakeLists.txt  main.cpp
src/server/test_server/: CMakeLists.txt  main.cpp  sequential_file_writer.h  test_service_impl.hpp
src/server/test_service/: test_service_impl.hpp
